Some left behind commits

--- a/tdd-with-spring-boot-postgresql/pom.xml
+++ b/tdd-with-spring-boot-postgresql/pom.xml
@@ -39,6 +39,7 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
+		<!-- Scope is test as we will only use this for integration test-->
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
